examples/test/testpolicy3397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3397
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key36: value6
      key24: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value28
          key41: value37
          key23: value13
      podSelector:
        matchLabels:
          key41: value5
